--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,23 @@ services:
         aliases:
           - "eurekaserver"
 
+  gateway:
+    image: gateway:0.0.1-SNAPSHOT
+    depends_on:
+      - configserver
+      - eurekaserver
+    restart: on-failure
+    environment:
+      CONFIG_SERVER_URI: "http://configserver:8071"
+      EUREKA_SERVER_URI: "http://eurekaserver:8761/eureka"
+    ports:
+      - "8072:8072"
+    networks:
+      backend:
+        aliases:
+          - "gateway"
+
+
   user:
     image: user:0.0.1-SNAPSHOT
     depends_on:
@@ -34,7 +51,7 @@ services:
       CONFIG_SERVER_URI: "http://configserver:8071"
       EUREKA_SERVER_URI: "http://eurekaserver:8761/eureka"
     ports:
-      - "8081:8081"
+      - "8081:8072"
     networks:
       backend:
         aliases:
@@ -50,11 +67,43 @@ services:
       CONFIG_SERVER_URI: "http://configserver:8071"
       EUREKA_SERVER_URI: "http://eurekaserver:8761/eureka"
     ports:
-      - "8082:8082"
+      - "8082:8072"
     networks:
       backend:
         aliases:
           - "gym"
+
+  trainer:
+    image: trainer:0.0.1-SNAPSHOT
+    depends_on:
+      - configserver
+      - eurekaserver
+    restart: on-failure
+    environment:
+      CONFIG_SERVER_URI: "http://configserver:8071"
+      EUREKA_SERVER_URI: "http://eurekaserver:8761/eureka"
+    ports:
+      - "8083:8072"
+    networks:
+      backend:
+        aliases:
+          - "trainer"
+
+  payment:
+    image: payment:0.0.1-SNAPSHOT
+    depends_on:
+      - configserver
+      - eurekaserver
+    restart: on-failure
+    environment:
+      CONFIG_SERVER_URI: "http://configserver:8071"
+      EUREKA_SERVER_URI: "http://eurekaserver:8761/eureka"
+    ports:
+      - "8084:8072"
+    networks:
+      backend:
+        aliases:
+          - "payment"
 
 networks:
   backend:
