docker-compose : reservation 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,22 @@ services:
         aliases:
           - "payment"
 
+  reservation:
+    image: reservation:0.0.1-SNAPSHOT
+    depends_on:
+      - configserver
+      - eurekaserver
+    restart: on-failure
+    environment:
+      CONFIG_SERVER_URI: "http://configserver:8071"
+      EUREKA_SERVER_URI: "http://eurekaserver:8761/eureka"
+    ports:
+      - "8085:8072"
+    networks:
+      backend:
+        aliases:
+          - "reservation"
+
 networks:
   backend:
     driver: bridge
