configserver : kafka 설정 추가

--- a/configserver/src/main/resources/config/gym-service-dev.yml
+++ b/configserver/src/main/resources/config/gym-service-dev.yml
@@ -1,3 +1,13 @@
 jwt:
   secretKey: jwtpassword
 
+spring:
+  cloud:
+    stream:
+      bingdings:
+        userTypeUpdated:
+          destination: userType-updated-topic
+      kafka:
+        binder:
+          zkNodes: kafka
+          brokers: kafka
