gym : userType 변경 이벤트 발신

--- a/gym/build.gradle
+++ b/gym/build.gradle
@@ -61,6 +61,10 @@ dependencies {
 //	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	//kafka
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 }
 
 dependencyManagement {
