--- a/user/build.gradle
+++ b/user/build.gradle
@@ -60,6 +60,10 @@ dependencies {
 	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.11.4'
 
 //	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+
+	//kafka
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 }
 
 dependencyManagement {
