configserver : kafka payment rollback 추가

--- a/configserver/src/main/resources/config/payment-service-dev.yml
+++ b/configserver/src/main/resources/config/payment-service-dev.yml
@@ -1,3 +1,21 @@
 jwt:
   secretKey: jwtpassword
 
+spring:
+  kafka:
+    consumer:
+      bootstrap-servers: kafka:9092
+      group-id: myGroup
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
+          deserializer:
+            value:
+              delegate:
+                class: com.project.user.message.consumer.CustomDeserializer
+
