--- a/payment/build.gradle
+++ b/payment/build.gradle
@@ -25,12 +25,14 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+	//JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	//Eureka
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 	//database
@@ -53,14 +55,14 @@ dependencies {
 
 	implementation 'com.google.code.gson:gson:2.9.0'
 
-//	implementation 'com.querydsl:querydsl-jpa'
-//	implementation 'com.querydsl:querydsl-apt'
 
 	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.11.4'
 
-//	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	//kafka 추가
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 dependencyManagement {
