configserver: deserializer 패키지 수정

--- a/configserver/src/main/resources/config/payment-service-dev.yml
+++ b/configserver/src/main/resources/config/payment-service-dev.yml
@@ -17,5 +17,5 @@ spring:
           deserializer:
             value:
               delegate:
-                class: com.project.user.message.consumer.CustomDeserializer
+                class: com.project.payment.message.consumer.CustomDeserializer
 
