--- a/trainer/build.gradle
+++ b/trainer/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 //	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	testImplementation("org.junit.platform:junit-platform-launcher:1.5.2")
+	testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
 }
 
 dependencyManagement {
