configserver: kafka 예약rollback, 티켓 save topic 추가

--- a/configserver/src/main/resources/config/gym-service-dev.yml
+++ b/configserver/src/main/resources/config/gym-service-dev.yml
@@ -19,6 +19,21 @@ spring:
       bootstrap-servers: kafka:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: com.project.gym.message.producer.CustomSerializer
-#      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      bootstrap-servers: kafka:9092
+      group-id: myGroup
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
+          deserializer:
+            value:
+              delegate:
+                class: com.project.gym.message.consumer.CustomDeserializer
+
 
 
