--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - KAFKA_ADVERTISED_HOST_NAME=kafka
       - KAFKA_ADVERTISED_PORT=9092
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CREATE_TOPICS="userType-updated-topic:1:1, payment-rollback-topic:1:1"
+      - KAFKA_CREATE_TOPICS="userType-updated-topic:1:1, payment-rollback-topic:1:1, reservation-rollback-topic:1:1, ticket-save-topic:1:1"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
