trainer: 예외처리 및 performace-save-topic 추가

--- a/trainer/build.gradle
+++ b/trainer/build.gradle
@@ -65,6 +65,9 @@ dependencies {
 
 	testImplementation("org.junit.platform:junit-platform-launcher:1.5.2")
 	testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
+
+	//kafka 추가
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 dependencyManagement {
