--- a/configserver/src/main/resources/config/trainer-service-dev.yml
+++ b/configserver/src/main/resources/config/trainer-service-dev.yml
@@ -3,10 +3,6 @@ jwt:
 
 spring:
   kafka:
-    producer:
-      bootstrap-servers: kafka:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: com.project.reservation.message.producer.CustomSerializer
     consumer:
       bootstrap-servers: kafka:9092
       group-id: myGroup
@@ -21,4 +17,4 @@ spring:
           deserializer:
             value:
               delegate:
-                class: com.project.reservation.message.consumer.CustomDeserializer
+                class: com.project.trainer.message.consumer.CustomDeserializer
